Edited wiki page through web user interface.

--- a/wiki/MoreSalmonUseCases.wiki
+++ b/wiki/MoreSalmonUseCases.wiki
@@ -6,8 +6,11 @@ Please add more Salmon use cases that can be considered as part of the specifica
 
 = Details =
 
-* SelfSalmon
-* Unsolicited @replies and follows of people -- real time notifications and data updates for cross-site follower lists as well.
-* Published, signed "offers to sell" and "offers to buy" and "offers to hire".
-* License grant request for syndicated content (contact endpoint for structured "I want to re-use this content beyond fair use" requests)
-* Request for quotes (mortgage rates, auto insurance, ...) without revealing contact information.
+  * SelfSalmon
+  * Unsolicited @replies and follows of people -- real time notifications and data updates for cross-site follower lists as well.
+  * Published, signed "offers to sell" and "offers to buy" and "offers to hire".
+  * License grant request for syndicated content (contact endpoint for structured "I want to re-use this content beyond fair use" requests)
+  * Request for quotes (mortgage rates, auto insurance, ...) without revealing contact information.
+  * Reputation generation via published activities -- an analysis of salmon.
+  * Ratings via Salmon with provenance.
+  * Non-hierarchical web of trust mechanism for public key verification -- if you are connected to A, A can send a signed salmon vouching for B's public key, obviating the need for a hierarchical certificate authority.
