--- a/wiki/MoreSalmonUseCases.wiki
+++ b/wiki/MoreSalmonUseCases.wiki
@@ -16,3 +16,4 @@ Please add more Salmon use cases that can be considered as part of the specifica
   * Non-hierarchical web of trust mechanism for public key verification -- if you are connected to A, A can send a signed salmon vouching for B's public key, obviating the need for a hierarchical certificate authority.
   * Distributed spam notifications with reporter provenance -- "X says Y is spam", potentially with details in the structured message (urls that are spammy, confidence levels, etc.)
   * Peer to peer payments through a distributed trading system for signed IOUs.
+  * Decentralized Music/Restaurant/Book reviews by providing endpoints for such works/businesses and allowing an "in-review-of" (a la "in-reply-to") relation to be included in salmon.
